Prevents the menu icon to overlap over the site title

--- a/src/sass/views/_smallViewUnder.scss
+++ b/src/sass/views/_smallViewUnder.scss
@@ -61,6 +61,7 @@
 }
 
 #wb-sttl {
+	padding-right: 4em;
 	a {
 		span {
 			font-size: 150%;
